<resources>
    <string name="app_name">Remainder</string>
    <string name="notes">Notes</string>
    <string name="task">Task</string>
    <string name="reminder">Reminder</string>
    <string name="category">Category</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="created_time">Created Time</string>
    <string name="last_modified">Last Modified</string>
    <string name="order">Order</string>
    <string name="ascending_order">Ascending Order</string>
    <string name="descending_order">Descending Order</string>
    <string name="add_category">Add Category</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="sort_by">Sort by</string>

</resources>
