<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:padding="10dp">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sort_by_criteria_group">
        <RadioButton
            android:id="@+id/sort_by_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"/>
        <RadioButton
            android:id="@+id/sort_by_created_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_time"/>
        <RadioButton
            android:id="@+id/sort_by_last_modified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_modified"/>
    </RadioGroup>
    <TextView
        android:id="@+id/order_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sort_by_criteria_group"
        android:text="@string/order"
        android:layout_centerHorizontal="true"
        style="@style/normal_text">

    </TextView>
    <RadioGroup
        android:id="@+id/sort_by_order_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_textview">
        <RadioButton
            android:id="@+id/sort_by_ascending_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ascending_order"/>
        <RadioButton
            android:id="@+id/sort_by_descending_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descending_order"/>
    </RadioGroup>
</RelativeLayout>